--- a/login_green/userlist.html
+++ b/login_green/userlist.html
@@ -36,27 +36,12 @@
 <div id="content">
 	<div class="left_menu">
 				<ul id="nav_dot">
-      <li>
-          <h4 class="M1">系统公告</h4>
-          <div class="list-item none">
-            <a href=''>系统公告1</a>
-            <a href=''>系统公告2</a>
-          </div>
-        </li>
         <li>
           <h4 class="M2">用户管理</h4>
           <div class="list-item none">
             <a href=''>用户列表</a>
             <a href=''>用户查询</a>    
            </div>
-        </li>
-				<li>
-          <h4 class="M3">党建答题</h4>
-          <div class="list-item none">
-            <a href=''>试题问卷1</a>
-            <a href=''>试题问卷2</a>
-            <a href=''>试题问卷3</a>
-          </div>
         </li>
 				<li>
           <h4  class="M4">数据统计</h4>
@@ -92,13 +77,15 @@
                         </button>
                     </div>
                     <div class="btn-group pull-right">
-                        <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">Tools <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu pull-right" role="menu">
-                            <li><a href="#">operation1</a></li>
-                            <li><a href="#">operation2</a></li>
-                            <li><a href="#">operation3</a></li>
-                        </ul>
+                        <input  id="searchInput" type="text" placeholder="请输入用户名搜索...">
+                        <button class="btn btn-success" onclick="search()">🔍</button>
+                        <!--<button class="btn btn-default dropdown-toggle" data-toggle="dropdown">Tools <span class="caret"></span>-->
+                        <!--</button>-->
+                        <!--<ul class="dropdown-menu pull-right" role="menu">-->
+                            <!--<li><a href="#">operation1</a></li>-->
+                            <!--<li><a href="#">operation2</a></li>-->
+                            <!--<li><a href="#">operation3</a></li>-->
+                        <!--</ul>-->
                     </div>
                 </div>
                 <div class="space15"></div>
@@ -106,12 +93,13 @@
                 <thead>
                 <tr>
                     <th>用户名</th>
-                    <th>身份</th>
+                    <th>状态</th>
+                    <th>信息条数</th>
                     <th>编辑</th>
                     <th>删除</th>
-                    <th></th>
                 </tr>
                 </thead>
+                    <tbody class="sel"></tbody>
                 </table>
                 </div>
                 </div>
@@ -139,7 +127,7 @@
                 </div>
             </div>
             <div class="modal fade edit-modal" tabindex="-1" role="dialog" aria-hidden="true">
-                <div class="modal-dialog modal-sm">
+                <div class="modal-dialog modal-sm" id="myModal">
                     <div class="modal-content">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -153,12 +141,14 @@
                                         <input name="username" class="form-control" id="userName" placeholder="Username">
                                     </div>
                                 </div>
+<!--
                                 <div class="form-group">
                                     <label for="inputEmail" class="col-sm-2 control-label">Email</label>
                                     <div class="col-sm-10">
                                         <input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email">
                                     </div>
                                 </div>
+-->
                                 <div class="form-group">
                                     <label for="password" class="col-sm-2 control-label">密码</label>
                                     <div class="col-sm-10">
@@ -175,7 +165,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                            <button type="button" class="btn btn-primary" id="save-confirm">保存</button>
+                            <button type="button" class="btn btn-primary" id="save-confirm" data-dismiss="modal">保存</button>
                         </div>
                     </div>
                 </div>
