--- a/login_green/userlist.html
+++ b/login_green/userlist.html
@@ -27,7 +27,7 @@
 		<ul>
 		 	<li>欢迎您！</li>
 			<li><a href="#">Admin</a></li>
-			<li><a href="#">修改密码</a></li>
+			<!--<li><a href="#">修改密码</a></li>-->
 			<li><a href="#">设置</a></li>
 			<li><a href="login.html">退出</a></li>
 		</ul>
@@ -77,7 +77,7 @@
                         </button>
                     </div>
                     <div class="btn-group pull-right">
-                        <input  id="searchInput" type="text" placeholder="请输入用户名搜索...">
+                        <input  id="searchInput" type="text" placeholder="请输入用户名关键字搜索...">
                         <button class="btn btn-success" onclick="search()">🔍</button>
                         <!--<button class="btn btn-default dropdown-toggle" data-toggle="dropdown">Tools <span class="caret"></span>-->
                         <!--</button>-->
@@ -94,7 +94,7 @@
                 <tr>
                     <th>用户名</th>
                     <th>状态</th>
-                    <th>信息条数</th>
+                    <th>发送信息条数</th>
                     <th>编辑</th>
                     <th>删除</th>
                 </tr>
@@ -141,14 +141,6 @@
                                         <input name="username" class="form-control" id="userName" placeholder="Username">
                                     </div>
                                 </div>
-<!--
-                                <div class="form-group">
-                                    <label for="inputEmail" class="col-sm-2 control-label">Email</label>
-                                    <div class="col-sm-10">
-                                        <input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email">
-                                    </div>
-                                </div>
--->
                                 <div class="form-group">
                                     <label for="password" class="col-sm-2 control-label">密码</label>
                                     <div class="col-sm-10">
