--- a/tvos1/newarticle/newarticle.html
+++ b/tvos1/newarticle/newarticle.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="css/newarticle.css" type="text/css" rel="stylesheet">
-    <script language="JavaScript" type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="../jquery-3.1.0.min.js"></script>
     <script src="js/jquery.form.js"></script>
     <script src="js/newarticle.js"></script>
     <title>新建图文消息</title>
@@ -17,13 +17,13 @@
         <div class="user">
             <img src="">
             <a href=""><span id="username"></span></a>
-            <a href="/tvos1/login/login.html"><span>退出</span></a>
+            <a href="../login/login.html"><span>退出</span></a>
         </div>
     </header>
     <main>
         <div class="top">
-            <a href="/tvos1/home/home.html" class="icon-goback"></a>
-            <a href="/tvos1/home/home.html" class="goback">素材管理</a>
+            <a href="../home/home.html" class="icon-goback"></a>
+            <a href="../home/home.html" class="goback">素材管理</a>
             &nbsp;&nbsp;<span>/</span>&nbsp;&nbsp;新建图文消息
         </div>
         <div class="left">
