--- a/tvos1/login/login.html
+++ b/tvos1/login/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>登录</title>
     <link href="login.css" type="text/css" rel="stylesheet">
-    <script language="JavaScript" type="text/javascript" src="../newarticle/js/jquery-3.1.0.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="../jquery-3.1.0.min.js"></script>
     <script src="login.js"></script>
 </head>
 <body>
