--- a/tvos1/home/home.html
+++ b/tvos1/home/home.html
@@ -136,7 +136,7 @@
                             </div>
                         </div>
                     <div class="list-table">
-                        <table class="table table-hover data-table">
+                        <table class="table table-hover data-table" id="questionnaireList">
                             <tbody>
                             <tr>
                                 <th style="text-align: center">标题</th>
