--- a/tvos1/home/home.html
+++ b/tvos1/home/home.html
@@ -137,12 +137,14 @@
                         </div>
                     <div class="list-table">
                         <table class="table table-hover data-table" id="questionnaireList">
-                            <tbody>
+                            <thead>
                             <tr>
                                 <th style="text-align: center">标题</th>
                                 <th style="text-align: center" width="100px">编辑</th>
                                 <th style="text-align: center" width="100px">查看</th>
                             </tr>
+                            </thead>
+                            <tbody>
                             <tr>
                                 <td style="text-align: center"></td>
                                 <td style="text-align: center"></td>
